@@ -1,5 +1,10 @@
 Release Notes for the EPICS ethercat module
 --------------------------------------------------
+ethercat-R4-3_1-2: 2016-03-03 J. Vasquez
+        * Changed the scanner hardcode RT priority from 60 to 40
+          on file ethercatApp/scannerSrc/scanner.c
+          40 is selected to lower than the network RT thread for eth1.
+          eth1 is the interface used by Ethercat
 
 ethercat-R4-3_1-1: 2016-02-24: Done by Jesus
          * modify the scanner code on MAIN_TRUNK in order to pass 
